--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
-tweepy
-textblob
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+et-xmlfile==1.0.1
+Flask==1.1.2
+idna==2.9
+itsdangerous==1.1.0
+jdcal==1.4.1
+Jinja2==2.11.2
+joblib==0.15.1
+MarkupSafe==1.1.1
+nltk==3.5
+oauthlib==3.1.0
+openpyxl==3.0.3
+PySocks==1.7.1
+regex==2020.5.14
+requests==2.23.0
+requests-oauthlib==1.3.0
+six==1.14.0
+textblob==0.15.3
+tqdm==4.46.0
+tweepy==3.8.0
+urllib3==1.25.9
+Werkzeug==1.0.1
