--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,10 @@ jdcal==1.4.1
 Jinja2==2.11.2
 joblib==0.15.1
 MarkupSafe==1.1.1
+nltk==3.5
 oauthlib==3.1.0
 openpyxl==3.0.3
+psycopg2-binary==2.8.5
 PySocks==1.7.1
 regex==2020.5.14
 requests==2.23.0
